deployments/stunner/mediasoup-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mediasoup-server
  name: mediasoup-server
  namespace: mediasoup
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: mediasoup-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mediasoup-server
    spec:
      containers:
      - env:
        - name: PROTOO_LISTEN_PORT
          value: "443"
        image: asia-southeast1-docker.pkg.dev/beam-372120/mediasoup-demo/mediasoup-demo-docker:latest
        imagePullPolicy: IfNotPresent
        name: mediasoup-server
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
