deployments/stunner/mediasoup-server-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediasoup-server
  namespace: mediasoup
spec:
  ports:
  - name: https-443
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app.kubernetes.io/name: mediasoup-server
  type: ClusterIP
