deployments/stunner/mediasoup-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_roomId"
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: mediasoup-server
  namespace: mediasoup
spec:
  ingressClassName: nginx
  rules:
  - host: mediasoup-demo.beings.com
    http:
      paths:
      - backend:
          service:
            name: mediasoup-server
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mediasoup-demo.beings.com
    secretName: mediasoup-demo.beings.com-tls
